feat(LIB-20): added improt endpoint and connected it to the UI
